crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__if_stmt_recovery_6.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"if else\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: If(
                IfStmt {
                    body: [
                        Node {
                            node: Expr(
                                ExprStmt {
                                    exprs: [
                                        Node {
                                            node: Missing(
                                                MissingExpr,
                                            ),
                                            filename: "",
                                            line: 1,
                                            column: 7,
                                            end_line: 1,
                                            end_column: 7,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 7,
                            end_line: 1,
                            end_column: 7,
                        },
                    ],
                    cond: Node {
                        node: Identifier(
                            Identifier {
                                names: [
                                    Node {
                                        node: "else",
                                        filename: "",
                                        line: 1,
                                        column: 3,
                                        end_line: 1,
                                        end_column: 7,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                        ),
                        filename: "",
                        line: 1,
                        column: 3,
                        end_line: 1,
                        end_column: 7,
                    },
                    orelse: [],
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 7,
        },
    ],
    comments: [],
}
