crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__list_recovery_13.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_expr_string(r#\"[\n    if True:\n        b = []\n]\n\"#)"
---
Node {
    node: List(
        ListExpr {
            elts: [
                Node {
                    node: ListIfItem(
                        ListIfItemExpr {
                            if_cond: Node {
                                node: NameConstantLit(
                                    NameConstantLit {
                                        value: True,
                                    },
                                ),
                                filename: "",
                                line: 2,
                                column: 7,
                                end_line: 2,
                                end_column: 11,
                            },
                            exprs: [
                                Node {
                                    node: Identifier(
                                        Identifier {
                                            names: [
                                                Node {
                                                    node: "b",
                                                    filename: "",
                                                    line: 3,
                                                    column: 8,
                                                    end_line: 3,
                                                    end_column: 9,
                                                },
                                            ],
                                            pkgpath: "",
                                            ctx: Load,
                                        },
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 8,
                                    end_line: 3,
                                    end_column: 9,
                                },
                                Node {
                                    node: Missing(
                                        MissingExpr,
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 10,
                                    end_line: 3,
                                    end_column: 11,
                                },
                                Node {
                                    node: List(
                                        ListExpr {
                                            elts: [],
                                            ctx: Load,
                                        },
                                    ),
                                    filename: "",
                                    line: 3,
                                    column: 12,
                                    end_line: 3,
                                    end_column: 14,
                                },
                            ],
                            orelse: None,
                        },
                    ),
                    filename: "",
                    line: 2,
                    column: 4,
                    end_line: 4,
                    end_column: 0,
                },
            ],
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 4,
    end_column: 1,
}
